--- a/index.html
+++ b/index.html
@@ -18,5 +18,45 @@
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <!-- navbar -->
+    <nav id="navbar">
+      <div class="navbar__logo">
+        <i class="far fa-smile-wink"></i>
+        <a href="#">Dongmin</a>
+      </div>
+      <div class="navbar__menu">
+        <ul class="navbar__menu">
+          <li class="navbar__menu__item">Home</li>
+          <li class="navbar__menu__item">About</li>
+          <li class="navbar__menu__item">Skills</li>
+          <li class="navbar__menu__item">My work</li>
+          <li class="navbar__menu__item">Testimonial</li>
+          <li class="navbar__menu__item">Contact</li>
+        </ul>
+      </div>
+    </nav>
+    <section id="home">
+      <img src="" alt="" />
+
+      <div class="home__body">
+        <div class="home__myImg">
+          <img src="" alt="" />
+        </div>
+        <div>
+          <h1>Hello,<br />I'm Dongmin</h1>
+        </div>
+      </div>
+    </section>
+    <!-- About -->
+    <section id="about"></section>
+    <!-- Skills -->
+    <section id="skills"></section>
+    <!-- mywork -->
+    <section id="mywork"></section>
+    <!--Testimonial  -->
+    <section id="testimonial"></section>
+    <!-- Contact -->
+    <section id="contact"></section>
+  </body>
 </html>
