--- a/index.html
+++ b/index.html
@@ -36,17 +36,20 @@
         </ul>
       </div>
     </nav>
+    <!-- Home -->
     <section id="home">
       <img src="" alt="" />
 
       <div class="home__body">
-        <div class="home__myImg">
-          <img src="" alt="" />
-        </div>
-        <div>
-          <h1>Hello,<br />I'm Dongmin</h1>
-        </div>
-      </div>
+        <img 
+        src="imgs/kimdongmin.jpg" 
+        alt="Dongmin's porofile photo" 
+        class="home__avatar"
+        />
+        <h1 class="home__title">안녕하세요, <br>FrontEnd가 즐거운 김동민입니다.</h1>
+        <h2 class="home__description">FrontEnd에서 그치지 않고 BackEnd까지 공부하여 FullStack 개발자가 되는것이 제 꿈입니다.꿈을 향해 멈추지 않고 달려가겠습니다.</h2>
+        <button class="home__contact">CONTACTT ME</button>
+
     </section>
     <!-- About -->
     <section id="about"></section>
