--- a/index.html
+++ b/index.html
@@ -38,21 +38,71 @@
     </nav>
     <!-- Home -->
     <section id="home">
-      <img src="" alt="" />
-
-      <div class="home__body">
-        <img 
-        src="imgs/kimdongmin.jpg" 
-        alt="Dongmin's porofile photo" 
+      <img
+        src="imgs/kimdongmin.jpg"
+        alt="Dongmin's porofile photo"
         class="home__avatar"
-        />
-        <h1 class="home__title">안녕하세요, <br>FrontEnd가 즐거운 김동민입니다.</h1>
-        <h2 class="home__description">FrontEnd에서 그치지 않고 BackEnd까지 공부하여 FullStack 개발자가 되는것이 제 꿈입니다.꿈을 향해 멈추지 않고 달려가겠습니다.</h2>
-        <button class="home__contact">CONTACTT ME</button>
-
+      />
+      <h1 class="home__title">
+        안녕하세요, <br />FrontEnd가 즐거운 김동민입니다.
+      </h1>
+      <h2 class="home__description">
+        FrontEnd에서 그치지 않고 BackEnd까지 공부하여 FullStack 개발자가
+        되는것이 제 목표입니다.
+      </h2>
+      <button class="home__contact">CONTACTT ME</button>
     </section>
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+      <h1>About me</h1>
+      <p>
+        저는 프론트엔드 개발자를 희망하는 김동민입니다. 1994년에 태어났으며
+        인천에 거주하고 있습니다. 웹표준 및 웹접근성을 준수한 웹코딩과
+        JavaScript를 이용한 동적인 UI.UX를 구현하여 사용자가 만족할 수 있는 웹
+        사이트를 개발하는 것입니다.
+      </p>
+
+      <div class="about__majors">
+        <div class="major">
+          <div class="major__icon">
+            <i class="fab fa-html5"></i>
+          </div>
+          <div class="major__title">HTML5</div>
+          <div class="major__description">웹표준,웹접근성,마크업</div>
+        </div>
+        <div class="major">
+          <div class="major__icon">
+            <i class="fab fa-css3-alt"></i>
+          </div>
+          <div class="major__title">CSS3</div>
+          <div class="major__description">
+            프로퍼티 성격과 동작원리 이해<br />크로스브라우징
+          </div>
+        </div>
+        <div class="major">
+          <div class="major__icon">
+            <i class="fab fa-js"></i>
+          </div>
+          <div class="major__title">JavaScript</div>
+          <div class="major__description">바닐라 JS, 반복문, 조건문</div>
+        </div>
+
+        <div class="major">
+          <div class="major__icon">
+            <i class="fab fa-react"></i>
+          </div>
+          <div class="major__title">React.js</div>
+          <div class="major__description">
+            클론코딩을 통해 한번 정도 사용해 봤으며<br />문서를 통해 꾸준히
+            공부중 입니다.
+          </div>
+        </div>
+      </div>
+      <div class="about__jobs">
+        <p>정보처리기사</p>
+      </div>
+    </section>
+
     <!-- Skills -->
     <section id="skills"></section>
     <!-- mywork -->
