--- a/index.html
+++ b/index.html
@@ -248,8 +248,27 @@
         </div>
       </div>
     </section>
-    <!--Testimonial  -->
-    <section id="testimonial"></section>
+    <!--Certificates  -->
+    <section id="certificates">
+      <h1>Certificates</h1>
+      <h3>Nomade coder Certificates</h3>
+      <div class="certificates">
+        <div class="certificate">
+          <img
+            src="imgs/certificates/nomadcoder.PNG"
+            alt="수료증"
+            class="certificate__image"
+          />
+        </div>
+        <div class="certificate">
+          <img
+            src="imgs/certificates/nomadcoder2.PNG"
+            alt="수료증"
+            class="certificate__image"
+          />
+        </div>
+      </div>
+    </section>
     <!-- Contact -->
     <section id="contact"></section>
   </body>
