--- a/index.html
+++ b/index.html
@@ -270,6 +270,20 @@
       </div>
     </section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+      <h1 class="contact__title">Let's talk</h1>
+      <h3 class="contact__email">rlaehdals753@naver.com</h3>
+      <div class="contact__links">
+        <a href="https://github.com/dongmin3891" taget="blank">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://blog.naver.com/rlaehdals753" target="blank">
+          <img src="imgs/blog.png" alt="blog" />
+        </a>
+      </div>
+      <p class="contact__rights">
+        2020 Dongmin Coding - All rights reserved
+      </p>
+    </section>
   </body>
 </html>
