--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
       </div>
       <div class="navbar__menu">
         <ul class="navbar__menu">
-          <li class="navbar__menu__item">Home</li>
+          <li class="navbar__menu__item active">Home</li>
           <li class="navbar__menu__item">About</li>
           <li class="navbar__menu__item">Skills</li>
-          <li class="navbar__menu__item">My work</li>
+          <li class="navbar__menu__item">Mywork</li>
           <li class="navbar__menu__item">Testimonial</li>
           <li class="navbar__menu__item">Contact</li>
         </ul>
       </div>
     </nav>
+
     <!-- Home -->
     <section id="home">
       <img
@@ -52,6 +53,7 @@
       </h2>
       <button class="home__contact">CONTACTT ME</button>
     </section>
+
     <!-- About -->
     <section id="about">
       <h1>About me</h1>
@@ -184,6 +186,7 @@
         </div>
       </div>
     </section>
+
     <!-- mywork -->
     <section id="mywork">
       <h1>My work</h1>
@@ -248,6 +251,7 @@
         </div>
       </div>
     </section>
+
     <!--Certificates  -->
     <section id="certificates">
       <h1>Certificates</h1>
@@ -269,6 +273,7 @@
         </div>
       </div>
     </section>
+
     <!-- Contact -->
     <section id="contact">
       <h1 class="contact__title">Let's talk</h1>
