--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         FrontEnd에서 그치지 않고 BackEnd까지 공부하여 FullStack 개발자가
         되는것이 제 목표입니다.
       </h2>
-      <button class="home__contact">CONTACTT ME</button>
+      <button class="home__contact">Contact Me</button>
     </section>
 
     <!-- About -->
