--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
 
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
       <h1>About me</h1>
       <p>
         저는 프론트엔드 개발자를 희망하는 김동민입니다. 1994년에 태어났으며
@@ -69,14 +69,14 @@
           <div class="major__icon">
             <i class="fab fa-html5"></i>
           </div>
-          <div class="major__title">HTML5</div>
+          <h2 class="major__title">HTML5</h2>
           <div class="major__description">웹표준,웹접근성,마크업</div>
         </div>
         <div class="major">
           <div class="major__icon">
             <i class="fab fa-css3-alt"></i>
           </div>
-          <div class="major__title">CSS3</div>
+          <h2 class="major__title">CSS3</h2>
           <div class="major__description">
             프로퍼티 성격과 동작원리 이해<br />크로스브라우징
           </div>
@@ -85,7 +85,7 @@
           <div class="major__icon">
             <i class="fab fa-js"></i>
           </div>
-          <div class="major__title">JavaScript</div>
+          <h2 class="major__title">JavaScript</h2>
           <div class="major__description">바닐라 JS, 반복문, 조건문</div>
         </div>
 
@@ -93,20 +93,17 @@
           <div class="major__icon">
             <i class="fab fa-react"></i>
           </div>
-          <div class="major__title">React.js</div>
+          <h class="major__title">React.js</h>
           <div class="major__description">
             클론코딩을 통해 한번 정도 사용해 봤으며<br />문서를 통해 꾸준히
             공부중 입니다.
           </div>
         </div>
       </div>
-      <div class="about__jobs">
-        <p>정보처리기사</p>
-      </div>
     </section>
 
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class="section">
       <h1>Skills</h1>
       <h2>Skills & Attributes</h2>
       <p>
@@ -188,7 +185,7 @@
     </section>
 
     <!-- mywork -->
-    <section id="mywork">
+    <section id="mywork" class="section">
       <h1>My work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
@@ -253,7 +250,7 @@
     </section>
 
     <!--Certificates  -->
-    <section id="certificates">
+    <section id="certificates" class="section">
       <h1>Certificates</h1>
       <h3>Nomade coder Certificates</h3>
       <div class="certificates">
@@ -271,11 +268,18 @@
             class="certificate__image"
           />
         </div>
+        <div class="certificate">
+          <img
+            src="imgs/certificates/정처기.PNG"
+            alt="자격증"
+            class="certificate__image"
+          />
+        </div>
       </div>
     </section>
 
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
       <h1 class="contact__title">Let's talk</h1>
       <h3 class="contact__email">rlaehdals753@naver.com</h3>
       <div class="contact__links">
