--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
 
     <!-- About -->
-    <section id="about" class="section">
+    <section id="about" class="section section__container">
       <h1>About me</h1>
       <p>
         저는 프론트엔드 개발자를 희망하는 김동민입니다. 1994년에 태어났으며
@@ -104,81 +104,83 @@
 
     <!-- Skills -->
     <section id="skills" class="section">
-      <h1>Skills</h1>
-      <h2>Skills & Attributes</h2>
-      <p>
-        저는 새로운 기술들을 배우는 것에 대해 거부감이 없습니다.<br />
-        저는 팀 환경이나 개인환경이든 어디서나 일 하는것에 대해 문제가
-        없습니다.<br />
-        저는 시간을 잘 지키며 스트레스가 있어도 충분히 잘 적응해서 할 수
-        있습니다.
-      </p>
-      <div class="skillset">
-        <div class="skillset__left">
-          <h3 class="skillset__title">Skills</h3>
-          <div class="skill">
-            <div class="skill__description">
-              <span>HTML</span>
-              <span>70%</span>
+      <div class="section__container">
+        <h1>Skills</h1>
+        <h2>Skills & Attributes</h2>
+        <p>
+          저는 새로운 기술들을 배우는 것에 대해 거부감이 없습니다.<br />
+          저는 팀 환경이나 개인환경이든 어디서나 일 하는것에 대해 문제가
+          없습니다.<br />
+          저는 시간을 잘 지키며 스트레스가 있어도 충분히 잘 적응해서 할 수
+          있습니다.
+        </p>
+        <div class="skillset">
+          <div class="skillset__left">
+            <h3 class="skillset__title">Skills</h3>
+            <div class="skill">
+              <div class="skill__description">
+                <span>HTML</span>
+                <span>70%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 70%;"></div>
+              </div>
             </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>CSS</span>
+                <span>70%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 70%;"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>JAVASCRIPT</span>
+                <span>40%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 40%;"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>TYPESCRIPT</span>
+                <span>10%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 10%;"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill__description">
+                <span>REACT</span>
+                <span>10%</span>
+              </div>
+              <div class="skill__bar">
+                <div class="skill__value" style="width: 10%;"></div>
+              </div>
             </div>
           </div>
-          <div class="skill">
-            <div class="skill__description">
-              <span>CSS</span>
-              <span>70%</span>
+          <div class="skillset__light">
+            <div class="tools">
+              <h3 class="skillset__title">Tools</h3>
+              <ul class="tools__list">
+                <li><span>Visual Studio Code</span></li>
+                <li><span>Atom</span></li>
+                <li><span>Visual Studio</span></li>
+                <li><span>Eclibse</span></li>
+                <li><span>AndroidStudio</span></li>
+              </ul>
             </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
+            <div class="etc">
+              <h3 class="skillset__title">Etc</h3>
+              <ul class="etc__list">
+                <li><span>Git</span></li>
+                <li><span>Good Comunication</span></li>
+              </ul>
             </div>
-          </div>
-          <div class="skill">
-            <div class="skill__description">
-              <span>JAVASCRIPT</span>
-              <span>40%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill__description">
-              <span>TYPESCRIPT</span>
-              <span>10%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill__description">
-              <span>REACT</span>
-              <span>10%</span>
-            </div>
-            <div class="skill__bar">
-              <div class="skill__value"></div>
-            </div>
-          </div>
-        </div>
-        <div class="skillset__light">
-          <div class="tools">
-            <h3 class="skillset__title">Tools</h3>
-            <ul class="tools__list">
-              <li><span>Visual Studio Code</span></li>
-              <li><span>Atom</span></li>
-              <li><span>Visual Studio</span></li>
-              <li><span>Eclibse</span></li>
-              <li><span>AndroidStudio</span></li>
-            </ul>
-          </div>
-          <div class="etc">
-            <h3 class="skillset__title">Etc</h3>
-            <ul class="etc__list">
-              <li><span>Git</span></li>
-              <li><span>Good Comunication</span></li>
-            </ul>
           </div>
         </div>
       </div>
