--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="major__icon">
             <i class="fab fa-react"></i>
           </div>
-          <h class="major__title">React.js</h>
+          <h2 class="major__title">React.js</h2>
           <div class="major__description">
             클론코딩을 통해 한번 정도 사용해 봤으며<br />문서를 통해 꾸준히
             공부중 입니다.
@@ -191,7 +191,7 @@
       <h1>My work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
-        <button class="category__btn">
+        <button class="category__btn active">
           All <span class="category__count">6</span>
         </button>
         <button class="category__btn">
@@ -203,45 +203,58 @@
         <button class="category__btn">
           Mobile <span class="category__count">0</span>
         </button>
+    </div>
 
         <div class="work__projects">
           <a href="" class="project" target="blank">
-            <img src="imgs/projects/youtube.PNG" alt="Youtube" />
+            <img src="imgs/projects/youtube.PNG" 
+            alt="Youtube" 
+            class="project__img"/>
             <div class="project__description">
               <h3>Youtube Site</h3>
               <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
             </div>
           </a>
           <a href="" class="project" target="blank">
-            <img src="imgs/projects/TodoList.png" alt="todolist" />
+            <img src="imgs/projects/TodoList.png" 
+            alt="todolist" 
+            class="project__img"/>
             <div class="project__description">
               <h3>TodoList Site</h3>
               <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
             </div>
           </a>
           <a href="" class="project" target="blank">
-            <img src="imgs/projects/react.png" alt="react" />
+            <img src="imgs/projects/react.png" 
+            alt="react" 
+            class="project__img"/>
             <div class="project__description">
               <h3>Movie List Site</h3>
               <span>Clone coding with React.js</span>
             </div>
           </a>
           <a href="" class="project" target="blank">
-            <img src="imgs/projects/PaintJS.png" alt="paint" />
+            <img src="imgs/projects/PaintJS.png" 
+            alt="paint" 
+            class="project__img"/>
             <div class="project__description">
               <h3>PaintGame Site</h3>
               <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
             </div>
           </a>
           <a href="" class="project" target="blank">
-            <img src="imgs/projects/myself4.PNG" alt="time" />
+            <img src="imgs/projects/myself4.PNG" 
+            alt="time" 
+            class="project__img"/>
             <div class="project__description">
               <h3>Myself and Realtime Site</h3>
               <span>HTML&CSS&Servlet</span>
             </div>
           </a>
           <a href="" class="project" target="blank">
-            <img src="imgs/projects/navbar.PNG" alt="navbar" />
+            <img src="imgs/projects/navbar.PNG" 
+            alt="navbar" 
+            class="project__img"/>
             <div class="project__description">
               <h3>Responsive Navbar</h3>
               <span>HTML, CSS with media query</span>
