--- a/index.html
+++ b/index.html
@@ -300,13 +300,13 @@
     <!-- Contact -->
     <section id="contact" class="section">
       <h1 class="contact__title">Let's talk</h1>
-      <h3 class="contact__email">rlaehdals753@naver.com</h3>
+      <h2 class="contact__email">rlaehdals753@naver.com</h2>
       <div class="contact__links">
         <a href="https://github.com/dongmin3891" taget="blank">
           <i class="fab fa-github"></i>
         </a>
         <a href="https://blog.naver.com/rlaehdals753" target="blank">
-          <img src="imgs/blog.png" alt="blog" />
+          <img src="imgs/blog.png" alt="blog" class="blog" />
         </a>
       </div>
       <p class="contact__rights">
