--- a/index.html
+++ b/index.html
@@ -188,78 +188,80 @@
 
     <!-- mywork -->
     <section id="mywork" class="section">
-      <h1>My work</h1>
-      <h3>Projects</h3>
-      <div class="work__categories">
-        <button class="category__btn active">
-          All <span class="category__count">6</span>
-        </button>
-        <button class="category__btn">
-          Front-end <span class="category__count">5</span>
-        </button>
-        <button class="category__btn">
-          Back-end <span class="category__count">1</span>
-        </button>
-        <button class="category__btn">
-          Mobile <span class="category__count">0</span>
-        </button>
-    </div>
-
-        <div class="work__projects">
-          <a href="" class="project" target="blank">
-            <img src="imgs/projects/youtube.PNG" 
-            alt="Youtube" 
-            class="project__img"/>
-            <div class="project__description">
-              <h3>Youtube Site</h3>
-              <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
-            </div>
-          </a>
-          <a href="" class="project" target="blank">
-            <img src="imgs/projects/TodoList.png" 
-            alt="todolist" 
-            class="project__img"/>
-            <div class="project__description">
-              <h3>TodoList Site</h3>
-              <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
-            </div>
-          </a>
-          <a href="" class="project" target="blank">
-            <img src="imgs/projects/react.png" 
-            alt="react" 
-            class="project__img"/>
-            <div class="project__description">
-              <h3>Movie List Site</h3>
-              <span>Clone coding with React.js</span>
-            </div>
-          </a>
-          <a href="" class="project" target="blank">
-            <img src="imgs/projects/PaintJS.png" 
-            alt="paint" 
-            class="project__img"/>
-            <div class="project__description">
-              <h3>PaintGame Site</h3>
-              <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
-            </div>
-          </a>
-          <a href="" class="project" target="blank">
-            <img src="imgs/projects/myself4.PNG" 
-            alt="time" 
-            class="project__img"/>
-            <div class="project__description">
-              <h3>Myself and Realtime Site</h3>
-              <span>HTML&CSS&Servlet</span>
-            </div>
-          </a>
-          <a href="" class="project" target="blank">
-            <img src="imgs/projects/navbar.PNG" 
-            alt="navbar" 
-            class="project__img"/>
-            <div class="project__description">
-              <h3>Responsive Navbar</h3>
-              <span>HTML, CSS with media query</span>
-            </div>
-          </a>
+      <div class="section__container">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work__categories">
+          <button class="category__btn active">
+            All <span class="category__count">6</span>
+          </button>
+          <button class="category__btn">
+            Front-end <span class="category__count">5</span>
+          </button>
+          <button class="category__btn">
+            Back-end <span class="category__count">1</span>
+          </button>
+          <button class="category__btn">
+            Mobile <span class="category__count">0</span>
+          </button>
+      </div>
+  
+          <div class="work__projects">
+            <a href="" class="project" target="blank">
+              <img src="imgs/projects/youtube.PNG" 
+              alt="Youtube" 
+              class="project__img"/>
+              <div class="project__description">
+                <h3>Youtube Site</h3>
+                <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
+              </div>
+            </a>
+            <a href="" class="project" target="blank">
+              <img src="imgs/projects/TodoList.png" 
+              alt="todolist" 
+              class="project__img"/>
+              <div class="project__description">
+                <h3>TodoList Site</h3>
+                <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
+              </div>
+            </a>
+            <a href="" class="project" target="blank">
+              <img src="imgs/projects/react.png" 
+              alt="react" 
+              class="project__img"/>
+              <div class="project__description">
+                <h3>Movie List Site</h3>
+                <span>Clone coding with React.js</span>
+              </div>
+            </a>
+            <a href="" class="project" target="blank">
+              <img src="imgs/projects/PaintJS.png" 
+              alt="paint" 
+              class="project__img"/>
+              <div class="project__description">
+                <h3>PaintGame Site</h3>
+                <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
+              </div>
+            </a>
+            <a href="" class="project" target="blank">
+              <img src="imgs/projects/myself4.PNG" 
+              alt="time" 
+              class="project__img"/>
+              <div class="project__description">
+                <h3>Myself and Realtime Site</h3>
+                <span>HTML&CSS&Servlet</span>
+              </div>
+            </a>
+            <a href="" class="project" target="blank">
+              <img src="imgs/projects/navbar.PNG" 
+              alt="navbar" 
+              class="project__img"/>
+              <div class="project__description">
+                <h3>Responsive Navbar</h3>
+                <span>HTML, CSS with media query</span>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
     </section>
