JS: Home Transparent

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
     <!-- Home -->
     <section id="home">
-      <img
+      <div class="home__container">
+        <img
         src="imgs/kimdongmin.jpg"
         alt="Dongmin's porofile photo"
         class="home__avatar"
@@ -56,6 +57,7 @@
         되는것이 제 목표입니다.
       </h2>
       <button class="home__contact">Contact Me</button>
+      </div>
     </section>
 
     <!-- About -->
