--- a/index.html
+++ b/index.html
@@ -321,5 +321,9 @@
         2020 Dongmin Coding - All rights reserved
       </p>
     </section>
+    <!-- Arrow up -->
+    <button class="arrow-up">
+        <i class="fas fa-arrow-up"></i>
+    </button>
   </body>
 </html>
