JS: project filterring

--- a/index.html
+++ b/index.html
@@ -198,22 +198,22 @@
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work__categories">
-          <button class="category__btn active">
+          <button class="category__btn active" data-filter="*">
             All <span class="category__count">6</span>
           </button>
-          <button class="category__btn">
+          <button class="category__btn" data-filter="front-end">
             Front-end <span class="category__count">5</span>
           </button>
-          <button class="category__btn">
+          <button class="category__btn" data-filter="back-end">
             Back-end <span class="category__count">1</span>
           </button>
-          <button class="category__btn">
-            Mobile <span class="category__count">0</span>
+          <button class="category__btn" data-filter="mobile">
+            Mobile <span class="category__count" >0</span>
           </button>
       </div>
   
           <div class="work__projects">
-            <a href="" class="project" target="blank">
+            <a href="" class="project" target="blank" data-type="front-end">
               <img src="imgs/projects/youtube.PNG" 
               alt="Youtube" 
               class="project__img"/>
@@ -222,7 +222,7 @@
                 <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
               </div>
             </a>
-            <a href="" class="project" target="blank">
+            <a href="" class="project" target="blank" data-type="front-end">
               <img src="imgs/projects/TodoList.png" 
               alt="todolist" 
               class="project__img"/>
@@ -231,7 +231,7 @@
                 <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
               </div>
             </a>
-            <a href="" class="project" target="blank">
+            <a href="" class="project" target="blank" data-type="front-end">
               <img src="imgs/projects/react.png" 
               alt="react" 
               class="project__img"/>
@@ -240,7 +240,7 @@
                 <span>Clone coding with React.js</span>
               </div>
             </a>
-            <a href="" class="project" target="blank">
+            <a href="" class="project" target="blank " data-type="front-end">
               <img src="imgs/projects/PaintJS.png" 
               alt="paint" 
               class="project__img"/>
@@ -249,7 +249,7 @@
                 <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
               </div>
             </a>
-            <a href="" class="project" target="blank">
+            <a href="" class="project" target="blank" data-type="back-end">
               <img src="imgs/projects/myself4.PNG" 
               alt="time" 
               class="project__img"/>
@@ -258,7 +258,7 @@
                 <span>HTML&CSS&Servlet</span>
               </div>
             </a>
-            <a href="" class="project" target="blank">
+            <a href="" class="project" target="blank" data-type="front-end">
               <img src="imgs/projects/navbar.PNG" 
               alt="navbar" 
               class="project__img"/>
