--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   
           <div class="work__projects">
             <a href="" class="project" target="blank" data-type="front-end">
-              <img src="imgs/projects/youtube.PNG" 
+              <img src="imgs/projects/youtube.png" 
               alt="Youtube" 
               class="project__img"/>
               <div class="project__description">
@@ -250,7 +250,7 @@
               </div>
             </a>
             <a href="" class="project" target="blank" data-type="back-end">
-              <img src="imgs/projects/myself4.PNG" 
+              <img src="imgs/projects/myself4.png" 
               alt="time" 
               class="project__img"/>
               <div class="project__description">
@@ -259,7 +259,7 @@
               </div>
             </a>
             <a href="" class="project" target="blank" data-type="front-end">
-              <img src="imgs/projects/navbar.PNG" 
+              <img src="imgs/projects/navbar.png" 
               alt="navbar" 
               class="project__img"/>
               <div class="project__description">
@@ -297,7 +297,7 @@
             
             
           <img
-            src="imgs/certificates/정처기1.PNG"
+            src="imgs/certificates/정처기.PNG"
             alt="자격증"
             class="certificate__image"
           />
