--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   
           <div class="work__projects">
             <a href="" class="project" target="blank" data-type="front-end">
-              <img src="/imgs/projects/youtube.png" 
+              <img src="/imgs/youtube.png" 
               alt="Youtube" 
               class="project__img"/>
               <div class="project__description">
@@ -223,7 +223,7 @@
               </div>
             </a>
             <a href="" class="project" target="blank" data-type="front-end">
-              <img src="/imgs/projects/todolist.png" 
+              <img src="/imgs/todolist.png" 
               alt="todolist" 
               class="project__img"/>
               <div class="project__description">
@@ -232,7 +232,7 @@
               </div>
             </a>
             <a href="" class="project" target="blank" data-type="front-end">
-              <img src="/imgs/projects/react.png" 
+              <img src="/imgs/react.png" 
               alt="react" 
               class="project__img"/>
               <div class="project__description">
@@ -241,7 +241,7 @@
               </div>
             </a>
             <a href="" class="project" target="blank " data-type="front-end">
-              <img src="/imgs/projects/paintjs.png" 
+              <img src="/imgs/paintjs.png" 
               alt="paint" 
               class="project__img"/>
               <div class="project__description">
@@ -250,7 +250,7 @@
               </div>
             </a>
             <a href="" class="project" target="blank" data-type="back-end">
-              <img src="/imgs/projects/myself.png" 
+              <img src="/imgs/myself.png" 
               alt="time" 
               class="project__img"/>
               <div class="project__description">
@@ -259,8 +259,8 @@
               </div>
             </a>
             <a href="" class="project" target="blank" data-type="front-end">
-              <img src="/imgs/projects/navbar.png" 
-              alt="navbar" 
+              <img src="/imgs/navbar.png" 
+              alt="navbar"
               class="project__img"/>
               <div class="project__description">
                 <h3>Responsive Navbar</h3>
@@ -297,7 +297,7 @@
             
             
           <img
-            src="/imgs/certificates/good.png"
+            src="/imgs/good.png"
             alt="자격증"
             class="certificate__image"
           />
