HTML:이미지 다시 수정

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   
           <div class="work__projects">
             <a href="" class="project" target="blank" data-type="front-end">
-              <img src="/imgs/youtube.png" 
+              <img src="imgs/projects/youtube.png" 
               alt="Youtube" 
               class="project__img"/>
               <div class="project__description">
@@ -223,7 +223,7 @@
               </div>
             </a>
             <a href="" class="project" target="blank" data-type="front-end">
-              <img src="/imgs/todolist.png" 
+              <img src="imgs/projects/todolist.png" 
               alt="todolist" 
               class="project__img"/>
               <div class="project__description">
@@ -232,7 +232,7 @@
               </div>
             </a>
             <a href="" class="project" target="blank" data-type="front-end">
-              <img src="/imgs/react.png" 
+              <img src="imgs/projects/react.png" 
               alt="react" 
               class="project__img"/>
               <div class="project__description">
@@ -241,7 +241,7 @@
               </div>
             </a>
             <a href="" class="project" target="blank " data-type="front-end">
-              <img src="/imgs/paintjs.png" 
+              <img src="imgs/projects/paintjs.png" 
               alt="paint" 
               class="project__img"/>
               <div class="project__description">
@@ -250,7 +250,7 @@
               </div>
             </a>
             <a href="" class="project" target="blank" data-type="back-end">
-              <img src="/imgs/myself.png" 
+              <img src="imgs/projects/myself.png" 
               alt="time" 
               class="project__img"/>
               <div class="project__description">
@@ -259,7 +259,7 @@
               </div>
             </a>
             <a href="" class="project" target="blank" data-type="front-end">
-              <img src="/imgs/navbar.png" 
+              <img src="imgs/projects/navbar.png" 
               alt="navbar"
               class="project__img"/>
               <div class="project__description">
@@ -279,14 +279,14 @@
       <div class="certificates">
         <div class="certificate">
           <img
-            src="/imgs/certificates/nomadcoder.png"
+            src="imgs/certificates/nomadcoder.png"
             alt="수료증"
             class="certificate__image"
           />
         </div>
         <div class="certificate">
           <img
-            src="/imgs/certificates/nomadcoder2.png"
+            src="imgs/certificates/nomadcoder2.png"
             alt="수료증"
             class="certificate__image"
           />
@@ -297,7 +297,7 @@
             
             
           <img
-            src="/imgs/good.png"
+            src="imgs/certificates/good.png"
             alt="자격증"
             class="certificate__image"
           />
