HTML:a tag link

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       </div>
   
           <div class="work__projects">
-            <a href="" class="project" target="blank" data-type="front-end">
+            <a href="https://dongmin3891.github.io/youtube/" class="project" target="blank" data-type="front-end">
               <img src="imgs/projects/youtube.png" 
               alt="Youtube" 
               class="project__img"/>
@@ -222,7 +222,7 @@
                 <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
               </div>
             </a>
-            <a href="" class="project" target="blank" data-type="front-end">
+            <a href="https://dongmin3891.github.io/todolist/" class="project" target="blank" data-type="front-end">
               <img src="imgs/projects/TodoList.PNG" 
               alt="todolist" 
               class="project__img"/>
@@ -231,7 +231,7 @@
                 <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
               </div>
             </a>
-            <a href="" class="project" target="blank" data-type="front-end">
+            <a href="https://github.com/dongmin3891/movie-_app_2020" class="project" target="blank" data-type="front-end">
               <img src="imgs/projects/react.PNG" 
               alt="react" 
               class="project__img"/>
@@ -240,7 +240,7 @@
                 <span>Clone coding with React.js</span>
               </div>
             </a>
-            <a href="" class="project" target="blank " data-type="front-end">
+            <a href="https://dongmin3891.github.io/paintjs/" class="project" target="blank " data-type="front-end">
               <img src="imgs/projects/PaintJS.PNG" 
               alt="paint" 
               class="project__img"/>
@@ -249,7 +249,7 @@
                 <span>Clone coding with HTML&CSS&JAVASCRIPT</span>
               </div>
             </a>
-            <a href="" class="project" target="blank" data-type="back-end">
+            <a href="https://github.com/dongmin3891/myself/" class="project" target="blank" data-type="back-end">
               <img src="imgs/projects/myself.png" 
               alt="time" 
               class="project__img"/>
@@ -258,7 +258,7 @@
                 <span>HTML&CSS&Servlet</span>
               </div>
             </a>
-            <a href="" class="project" target="blank" data-type="front-end">
+            <a href="https://dongmin3891.github.io/navbar/" class="project" target="blank" data-type="front-end">
               <img src="imgs/projects/navbar.png" 
               alt="navbar"
               class="project__img"/>
