HTML: Add portfolio

--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
         <h3>Projects</h3>
         <div class="work__categories">
           <button class="category__btn selected" data-filter="*">
-            All <span class="category__count">6</span>
+            All <span class="category__count">7</span>
           </button>
           <button class="category__btn" data-filter="front-end">
-            Front-end <span class="category__count">5</span>
+            Front-end <span class="category__count">6</span>
           </button>
           <button class="category__btn" data-filter="back-end">
             Back-end <span class="category__count">1</span>
@@ -213,6 +213,15 @@
       </div>
   
           <div class="work__projects">
+            <a href="https://github.com/dongmin3891/portfolio" class="project" target="blank" data-type="front-end">
+              <img src="imgs/projects/dongmin3.png" 
+              alt="portfolio 
+              class="project__img"/>
+              <div class="project__description">
+                <h3>My Portfolio</h3>
+                <span>HTML&CSS&JAVASCRIPT</span>
+              </div>
+            </a>
             <a href="https://github.com/dongmin3891/youtube" class="project" target="blank" data-type="front-end">
               <img src="imgs/projects/youtube.png" 
               alt="Youtube" 
