HTML: Add porfolio

--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
           <div class="work__projects">
             <a href="https://github.com/dongmin3891/portfolio" class="project" target="blank" data-type="front-end">
               <img src="imgs/projects/dongmin3.png" 
-              alt="portfolio 
-              class="project__img"/>
+              alt="portfolio" 
+              class= "project__img">
               <div class="project__description">
                 <h3>My Portfolio</h3>
                 <span>HTML&CSS&JAVASCRIPT</span>
